# personal_notion_reading_note

./: .gitignore  README.md  config.yaml  pyproject.toml
src/: dspy_modules.py  gemini_processor.py  logger_utils.py  main.py  models.py  notion_client.py
